plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.google.cloud.tools.jib' version '3.4.2'
}

jib{
	from {
		image = 'amazoncorretto:17'
	}
	to {
		image = 'jun23314/capstone'
		auth {
			username = project.findProperty(' jibUsername ') ?: ''
			password = project.findProperty('jibPassword') ?: ''
		}

	}
}

group = 'com.kau'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//h2
	runtimeOnly 'com.h2database:h2'
	testRuntimeOnly 'com.h2database:h2'

	//mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	//lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok:1.18.28'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.rest-assured:rest-assured:5.5.0'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	//s3
	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
}

tasks.named('test') {
	useJUnitPlatform()
}
